--- a/Stat133 Workout01/report/Workout01-Sophia-Yan.Rmd
+++ b/Stat133 Workout01/report/Workout01-Sophia-Yan.Rmd
@@ -34,13 +34,13 @@ effective_3PT
 
 ```{r eval=FALSE}
 
-####Introduction: Write a clear and captivating introduction that grabs the reader’s attention. And describe the purpose of the report.**
+####Introduction: Write a clear and captivating introduction that grabs the reader’s attention. And describe the purpose of the report.
 
 Do you like NBA? Do you enjoy watching NBA games? As a student at University of California, Berkeley, you must be familiar with the Golden State Warrior. Also, Stephen Curry, Kevin Durant, Thompson, Green,  are names that most people in California be familiar with, by default (just kidding). In this report I will use some data and some insights and reflection behind the data to talk a little bit about NBA the game, Golden State Warrior the team, and five famous basketball stars in GSW: Steven Curry, Kevin Durant, Draymond Green, Andre Iguodala, and Klay Thompson. 
 The main purposes of this report are: 1. Try to use data, graphs, and interpretation of data to explain something interesting in our life.  2. As a beginner of R language, be more familiar with the strong power of this language and be more proficient in using this wonderful tool.  3. Have a glance on how big data penetrating in our life, from field to field. 
 
 
-####Organize the content: Organize the content of your report in different sections: e.g. motivation, background, data, analysis, discussion, conclusions, and references.**
+####Organize the content: Organize the content of your report in different sections: e.g. motivation, background, data, analysis, discussion, conclusions, and references.
 
 **Motivation**:  1. Try to use data, graphs, and interpretation of data to explain something interesting in our life.  2. As a beginner of R language, be more familiar with the strong power of this language and be more proficient in using this wonderful tool.  3. Have a glance on how big data penetrating in our life, from field to field. 
 
