--- a/Stat133 Workout01/report/Workout01-Sophia-Yan.Rmd
+++ b/Stat133 Workout01/report/Workout01-Sophia-Yan.Rmd
@@ -53,7 +53,7 @@ From the images in the file we may conclude that:
 All players except Green have a total rank of 5 (rank 2pt + rank 3pt), but Curry is the one with most shoots, so over all he has the highest hit rate.
 3. **Here is the most essential part of my analysis**  I am not a basketball fan, so the data confuse me a little. I know Green is one of the most important player in this team and named as one of the "the BIG Four", but just from the data I have no idea why does he deserve such complement. Therefore, I asked my friend M who is a super fan of NBA about this, and here is the keytakeaway: 
 -(1). Green is a great defender. However, the data only shows the hit-rate, which indicates the players ability as a point guard or shooting guard. 
--(2). Green has outstanding leadership. He knows how to inspire his teammates as well as deter his opponent. That is kind of a "soft skill" in the game. I learn from this case that, in individual sport competition, the score/number(which is data) is the only standard of ranking athletes. However, in team competition such as basketball, there are a lot of "soft skill" that have huge impact on the team's performance but can hardly been "datafied" (tranlated into data). Data is objective, but sometimes it cannot reflect the whole thing as it is. 
+-(2). Green has outstanding leadership. He knows how to inspire his teammates as well as deter his opponent. That is kind of a "soft skill" in the game. I learn from this case that, in individual sport competition, the score/number(which is data) is the only standard of ranking athletes. However, in team competition such as basketball, there are a lot of "soft skill" that have huge impact on the team performance but can hardly been "datafied" (tranlated into data). Data is objective, but sometimes it cannot reflect the whole thing as it is. 
 -(3). When making conclusion from data, we should keep in mind to check that: A. if this data only reflect certain aspects of the whole group, but there is something important that been ignored.  B. if there is some factors that might influence our conclusion, but can not be transform into data.
 
 
